--- a/style.css
+++ b/style.css
@@ -68,12 +68,18 @@ h2 {
  }
 
  .image { 
-    margin: 50px;
-    padding: 50px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-bottom: 50px;
+    padding-top: 50px;
     border-radius: 50%;
  }
 
  h2 {
+    margin-top: 0px;
+    padding-top: 0px;
+    margin-bottom: 0px;
+    padding-bottom: 10px;
     color:#66bfbf;
     font-size: 2rem;
     font-family: "Merriweather", serif;
@@ -81,6 +87,8 @@ h2 {
  }
 
  p {
+    margin-top: 30px;
+    padding-top: 5px;
     color: rgb(212, 201, 190);
     font-size: 2rem;
     text-align: center;
