--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 
-@media (max-width:1400px) and (min-width:480px) {
+@media (max-width:600px) and (min-width:2400px) {
     h1 {
         font-size: 20rem;
     }
@@ -9,6 +9,9 @@
         flex-wrap: wrap;
         flex-direction:row-reverse;
         justify-content: center;
+    }
+    .bottom-container {
+        margin-bottom: auto;
     }
 }
 
@@ -122,8 +125,8 @@ h2 {
  .bottom-container {
     margin-top: 0px;
     margin-bottom: 0px;
-    padding-top: 20px;
-    padding-bottom: 0px;
+    padding-top: 50px;
+    padding-bottom: 100px;
     background-color: rgb(3, 3, 3);
     display: block;
     text-align: center;
@@ -131,8 +134,6 @@ h2 {
 
  .footer-link {
     color:  rgb(18, 52, 88);
-    margin: 10px;
-    padding: 10px;
+    margin: 20px;
+    padding: 20px;
  }
-
- 
