--- a/style.css
+++ b/style.css
@@ -137,3 +137,14 @@ h2 {
     margin: 20px;
     padding: 20px;
  }
+
+ .video {
+    display: block;
+    margin-top: 0px;
+    margin-left: 0px;
+    padding-left: 0px;
+    margin-right: 0px;
+    padding-right: 0px;
+    margin-bottom: 0px;
+    padding-bottom: 5px;
+ }
